// Copyright 2024 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.securecomputation.metadata;

import "google/api/field_behavior.proto";
import "google/api/resource.proto";
import "google/protobuf/timestamp.proto";

option java_package = "org.wfanet.measurement.securecomputation.metadata";
option java_multiple_files = true;
option java_outer_classname = "RequisitionMetadataProto";


message RequisitionMetadata {
  string  name = 1;
  // Resource name of the `Requisition` this metadata references.
  string requisition_name = 2 [
    (google.api.resource_reference).type = "halo.wfanet.org/Requisition",
    (google.api.field_behavior) = IDENTIFIER
  ];
  string storage_uri = 3;

  // Enum for State
  enum State {
    STATE_UNDEFINED = 0;
    FETCHED = 1;
    STORED = 2;
    QUEUED = 3;
    PROCESSING = 4;
    PROCESSED = 5;
    DELETED = 6;
  }

  State current_state = 4;
  google.protobuf.Timestamp create_time = 5;
}
